--- a/port.html
+++ b/port.html
@@ -70,10 +70,10 @@
         <img src="portfolio.png" alt="Portfolio Website">
         <h3>Portfolio Website</h3>
         <div class="project-buttons">
-          <a href="https://your-portfolio-link.com" target="_blank" class="btn project-btn">
+          <a href="https://pillidivyakrupa.github.io/Portfolio/" target="_blank" class="btn project-btn">
             <i class="fas fa-up-right-from-square"></i> Live Demo
           </a>
-          <a href="https://github.com/yourusername/portfolio" target="_blank" class="btn project-btn secondary-btn">
+          <a href="https://github.com/PilliDivyaKrupa/Portfolio" target="_blank" class="btn project-btn secondary-btn">
             <i class="fab fa-github"></i> Code
           </a>
         </div>
