--- a/port.html
+++ b/port.html
@@ -60,7 +60,7 @@
         <img src="portfolio.png" alt="Portfolio Website">
         <h3>Portfolio Website</h3>
         <div class="project-buttons">
-          <a href="https://pillidivyakrupa.github.io/Portfolio/" target="_blank" class="btn project-btn">
+          <a href="https://pillidivyakrupa.github.io/Portfolio" target="_blank" class="btn project-btn">
             <i class="fas fa-up-right-from-square"></i> Live Demo
           </a>
           <a href="https://github.com/PilliDivyaKrupa/Portfolio" target="_blank" class="btn project-btn secondary-btn">
